fix(pages): publish only index & assets from a deploy folder to avoid including repo metadata

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -15,11 +15,16 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Prepare deploy directory
+        run: |
+          mkdir -p deploy
+          cp -r index.html assets deploy/
+
       - name: Deploy to GitHub Pages via gh-pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./
+          publish_dir: ./deploy
           user_name: 'github-actions'
           user_email: 'github-actions@github.com'
 name: Deploy to GitHub Pages
